# FastAPI-with-React

./: .dockerignore  .editorconfig  .sample.env  README.md  docker-compose.yaml  pyproject.toml
apps/backend/: requirements.txt
apps/backend/app/: config.py  main.py
apps/backend/app/db/: mongoclient.py
apps/backend/app/users/: hashes.py  routers.py
apps/backend/commands/: entrypoint.sh  run.sh
apps/docker/backend/: Dockerfile
apps/docker/frontend/: Dockerfile
apps/docker/nginx/: nginx.conf
apps/frontend/: index.html  package.json  vite.config.ts
apps/frontend/src/: App.tsx  constants.ts  index.scss  index.tsx
apps/frontend/src/components/TutorialHeader/: TutorialHeader.tsx
apps/frontend/src/content/LandingPage/: LandingPage.tsx
apps/frontend/src/content/LoginPage/: LoginPage.tsx
apps/frontend/src/content/RegisterPage/: RegisterPage.tsx  _register-page.css
apps/frontend/src/content/RepoPage/: RepoTable.tsx
backend/: Dockerfile  run.sh
backend/app/: config.py  main.py
backend/app/db/: mongoclient.py
backend/app/users/: auth.py  hashes.py  routers.py  schema.py
commands/: delete-docker.sh  mongo-init.sh
frontend/: .prettierignore  Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  constants.js  index.js
frontend/src/components/TutorialHeader/: TutorialHeader.js
frontend/src/content/LoginPage/: LoginPage.js  _login-page.scss
frontend/src/content/RegisterPage/: RegisterPage.js  _register-page.css
nginx/: nginx.conf
